<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    android:background="#000000"
    tools:context="com.hert.legacyofat.activity.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/leftVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/rightVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />

    <android.support.constraint.Guideline
        android:id="@+id/topHoriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomHoriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomHorizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <android.support.constraint.Guideline
        android:id="@+id/vert1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/vert2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/vert3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/vert4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/vertConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/horizConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/horizInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <com.hert.legacyofat.layout.NonSwipeableViewPager
        android:id="@+id/contentPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/leftVert"
        app:layout_constraintRight_toLeftOf="@+id/rightVert"
        app:layout_constraintTop_toTopOf="@+id/horizInfo"
        app:layout_constraintBottom_toTopOf="@+id/bottomHoriz"
        />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/leftVert"
        app:layout_constraintRight_toLeftOf="@+id/vert1"
        app:layout_constraintTop_toTopOf="@+id/bottomHoriz"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizButton"
        android:onClick="onClick"
        android:text="@string/main_main"
        android:fontFamily="monospace"
        android:textColor="#00FF00"
        android:textAlignment="center"
        android:background="#00000000" />

    <Button
        android:id="@+id/rosterButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert1"
        app:layout_constraintRight_toLeftOf="@+id/vert2"
        app:layout_constraintTop_toTopOf="@+id/bottomHoriz"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizButton"
        android:onClick="onClick"
        android:text="@string/main_roster"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:background="#00000000"/>

    <Button
        android:id="@+id/battleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert2"
        app:layout_constraintRight_toLeftOf="@+id/vert3"
        app:layout_constraintTop_toTopOf="@+id/bottomHoriz"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizButton"
        android:onClick="onClick"
        android:text="@string/main_battle"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:background="#00000000"/>

    <Button
        android:id="@+id/gachaButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert3"
        app:layout_constraintRight_toLeftOf="@+id/vert4"
        app:layout_constraintTop_toTopOf="@+id/bottomHoriz"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizButton"
        android:onClick="onClick"
        android:text="@string/main_gacha"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:background="#00000000"/>

    <Button
        android:id="@+id/shopButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert4"
        app:layout_constraintRight_toLeftOf="@+id/rightVert"
        app:layout_constraintTop_toTopOf="@+id/bottomHoriz"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizButton"
        android:onClick="onClick"
        android:text="@string/main_shop"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:background="#00000000"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/leftVert"
        app:layout_constraintRight_toLeftOf="@+id/rightVert"
        app:layout_constraintTop_toTopOf="@+id/horizInfo"
        app:layout_constraintBottom_toTopOf="@+id/horizInfo"
        android:includeFontPadding="false"
        android:text="---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
        android:textColor="#FFFFFF"
        android:fontFamily="monospace"
        android:layout_margin="0dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="14sp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mainConnecting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vertConnecting"
        app:layout_constraintRight_toLeftOf="@+id/rightVert"
        app:layout_constraintTop_toTopOf="@+id/topHoriz"
        app:layout_constraintBottom_toTopOf="@+id/horizConnecting"
        android:text="@string/misc_connecting"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="22sp"
        android:visibility="invisible"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mainName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/leftVert"
        app:layout_constraintRight_toLeftOf="@+id/vert1"
        app:layout_constraintTop_toTopOf="@+id/topHoriz"
        app:layout_constraintBottom_toTopOf="@+id/horizInfo"
        android:text="name"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mainLevel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert1"
        app:layout_constraintRight_toLeftOf="@+id/vert2"
        app:layout_constraintTop_toTopOf="@+id/topHoriz"
        app:layout_constraintBottom_toTopOf="@+id/horizInfo"
        android:text="rank 000"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mainJims"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert4"
        app:layout_constraintRight_toLeftOf="@+id/rightVert"
        app:layout_constraintTop_toTopOf="@+id/topHoriz"
        app:layout_constraintBottom_toTopOf="@+id/horizInfo"
        android:text="jims 00000"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mainGold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert3"
        app:layout_constraintRight_toLeftOf="@+id/vert4"
        app:layout_constraintTop_toTopOf="@+id/topHoriz"
        app:layout_constraintBottom_toTopOf="@+id/horizInfo"
        android:text="gold 00000"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mainTeam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/vert2"
        app:layout_constraintRight_toLeftOf="@+id/vert3"
        app:layout_constraintTop_toTopOf="@+id/topHoriz"
        app:layout_constraintBottom_toTopOf="@+id/horizInfo"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="12sp" />

</android.support.constraint.ConstraintLayout>
